gts-macros/tests/compile_fail/missing_base.stderr
error: unexpected end of input, Missing required attribute: base (use 'base = true' for base types or 'base = ParentStruct' for child types)
  --> tests/compile_fail/missing_base.rs:5:1
   |
 5 | / #[struct_to_gts_schema(
 6 | |     dir_path = "schemas",
 7 | |     schema_id = "gts.x.app.entities.user.v1~",
 8 | |     description = "User entity",
 9 | |     properties = "id"
10 | | )]
   | |__^
   |
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
